# hl_mai_lab_01

./: CMakeLists.txt  docker-compose.yml  gc_start.sh  group_chat_main.cpp  index_gc.yaml  index_p2p.yaml  p2p_main.cpp  p2p_start.sh  task.md
database/: group_chat.cpp  group_chat.h  list_users.cpp  list_users.h  message.cpp  message.h  p2p.cpp  p2p.h
group_chat_server/: Dockerfile  http_gc_server.h  http_request_factory.h
group_chat_server/handlers/: gc_handler.h
my_service/: Dockerfile
other_server/: Dockerfile
p2p_server/: Dockerfile  http_p2p_server.h  http_request_factory.h
p2p_server/handlers/: p2p_handler copy.h  p2p_handler.h
web_server/: http_request_factory.h
web_server/handlers/: user_handler.h
